--- a/pom.xml
+++ b/pom.xml
@@ -1,56 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.scijava</groupId>
-		<artifactId>pom-scijava</artifactId>
-		<version>1.126</version>
-		<relativePath />
-	</parent>
+    <parent>
+        <groupId>org.scijava</groupId>
+        <artifactId>pom-scijava</artifactId>
+        <version>17.1.1</version>
 
-	<groupId>sc.fiji</groupId>
-	<artifactId>import_Bscope</artifactId>
-	<version>1.0.0</version>
+    </parent>
 
-	<name>import_Bscope</name>
-	<description>Spim-Bscope image reader</description>
+    <groupId>sc.fiji</groupId>
+    <artifactId>import_Bscope</artifactId>
+    <version>1.0.1</version>
 
-	<dependencies>
-		<dependency>
-			<groupId>net.imagej</groupId>
-			<artifactId>ij</artifactId>
-			<version>${imagej1.version}</version>
-		</dependency>
-	</dependencies>
+    <name>import_Bscope</name>
+    <description>Spim-Bscope image reader</description>
 
-	<developers>
-		<developer>
-			<id>xxx</id>
-			<name>yyy</name>
-			<email></email>
-			<url></url>
-			<organization></organization>
-			<organizationUrl></organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>-6</timezone>
-		</developer>
-	</developers>
+    <url>https://github.com/ClearControl/clearcontrol-plugin/</url>
+    <inceptionYear>2015</inceptionYear>
 
-	<repositories>
-		<!-- NB: for project parent -->
-		<repository>
-			<id>imagej.public</id>
-			<url>http://maven.imagej.net/content/groups/public</url>
-		</repository>
-	</repositories>
+    <organization>
+        <name>MPI CBG</name>
+        <url>https://www.mpi-cbg.de/</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>BSD License Version 3</name>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	
 
+
+
+
+
+
+    <mailingLists>
+        <mailingList>
+            <name>ImageJ Forum</name>
+            <archive>http://forum.imagej.net/</archive>
+        </mailingList>
+    </mailingLists>
+
+
+    <properties>
+        <package-name>net.imglib2.cache.xwing</package-name>
+
+        <license.licenseName>bsd_2</license.licenseName>
+        <license.projectName>ImgLib2: a general-purpose, multidimensional image processing library.</license.projectName>
+        <license.organizationName>ImgLib2 authors</license.organizationName>
+        <license.copyrightOwners>Tobias Pietzsch, Stephan Preibisch, Stephan Saalfeld,
+            John Bogovic, Albert Cardona, Barry DeZonia, Christian Dietz, Jan Funke,
+            Aivar Grislis, Jonathan Hale, Grant Harris, Stefan Helfrich, Mark Hiner,
+            Martin Horn, Steffen Jaensch, Lee Kamentsky, Larry Lindsey, Melissa Linkert,
+            Mark Longair, Brian Northan, Nick Perry, Curtis Rueden, Johannes Schindelin,
+            Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
+        <imagej.app.directory>C:/Programs/Fiji.app/</imagej.app.directory>
+
+        <junit.version>4.12</junit.version>
+        <junit.jupiter.version>5.0.0</junit.jupiter.version>
+        <junit.vintage.version>${junit.version}.0</junit.vintage.version>
+    </properties>
+
+
+    <scm>
+        <connection>scm:git:git.mpi-cbg.de:bioimage-informatics/imgtools</connection>
+        <developerConnection>scm:git:git@git.mpi-cbg.de:bioimage-informatics/imgtools</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://git.mpi-cbg.de:bioimage-informatics/imgtools</url>
+    </scm>
+    <issueManagement>
+        <system>Gitlab Issues</system>
+        <url>https://git.mpi-cbg.de:bioimage-informatics/imgtools/issues</url>
+    </issueManagement>
+    <ciManagement>
+        <system>None</system>
+    </ciManagement>
+
+
+    <developers>
+        <developer>
+            <id>haesleinhuepf</id>
+            <name>Robert Haase</name>
+            <url>https://github.com/haesleinhuepf</url>
+            <roles>
+                <role>maintainer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <contributors>
+        <contributor>
+            <name>Loic Alain Royer</name>
+            <properties><id>royerloic</id></properties>
+        </contributor>
+        <contributor>
+            <name>Martin Weigert</name>
+            <properties><id>maweigert</id></properties>
+        </contributor>
+        <contributor>
+            <properties><id>tpietzsch</id></properties>
+            <name>Tobias Pietzsch</name>
+            <url>http://imagej.net/User:Pietzsch</url>
+        </contributor>
+    </contributors>
+
+    <repositories>
+        <!-- NB: for project parent -->
+        <repository>
+            <id>imagej.public</id>
+            <url>http://maven.imagej.net/content/groups/public</url>
+        </repository>
+    </repositories>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>ij</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope></scope>
+        </dependency>
+        <dependency>
+            <groupId>net.imglib2</groupId>
+            <artifactId>imglib2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.imglib2</groupId>
+            <artifactId>imglib2-ij</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.imglib2</groupId>
+            <artifactId>imglib2-cache</artifactId>
+            <version>1.0.0-beta-6</version>
+        </dependency>
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>bigdataviewer-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.imglib2</groupId>
+            <artifactId>imglib2-realtransform</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.imglib2</groupId>
+            <artifactId>imglib2-ui</artifactId>
+            <version>2.0.0-beta-32</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>ui-behaviour</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>bigdataviewer-vistools</artifactId>
+            <version>1.0.0-beta-7</version>
+        </dependency>
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>fiji-lib</artifactId>
+        </dependency>
+    </dependencies>
 </project>
 
